# dispatch

./: .dockerignore  .gitignore  Cargo.toml  DELIVERABLES.md  Dockerfile  README.md  RFC.md  ROADMAP.md  config.example.toml  docker-compose.yml  docs.json
.context/outputs/1/: audit-debug.md  audit-report.md
.github/workflows/: ci.yml
consumer-sdk/: README.md  package-lock.json  package.json
consumer-sdk/src/: attestation.ts  client.ts  discovery.ts  index.ts  tap.ts
contracts/: .env.example
contracts/broadcast/Deploy.s.sol/42161/: run-1776241330873.json  run-1776244376906.json  run-latest.json
contracts/broadcast/SetupE2E.s.sol/31337/: run-1776190007597.json  run-1776190171743.json  run-1776193832807.json  run-1776194004602.json  (+3 more)
contracts/cache/: solidity-files-cache.json
contracts/script/: Deploy.s.sol  Register.s.sol  TestDeposit.s.sol
contracts/src/: RPCDataService.sol
contracts/src/interfaces/: IRPCDataService.sol
contracts/src/lib/: StateProofVerifier.sol
contracts/test/: EIP712CrossLanguage.t.sol  RPCDataService.t.sol  StateProofVerifier.t.sol
crates/dispatch-gateway/: Cargo.toml  gateway.example.toml
crates/dispatch-gateway/src/: config.rs  discovery.rs  error.rs  lib.rs  main.rs  metrics.rs  probe.rs  registry.rs  selector.rs  server.rs
crates/dispatch-gateway/src/routes/: aggregate.rs  metrics.rs  mod.rs  rpc.rs
crates/dispatch-oracle/: Cargo.toml
crates/dispatch-oracle/src/: config.rs
crates/dispatch-service/src/: attestation.rs  collector.rs  config.rs  error.rs  escrow.rs  lib.rs  main.rs  server.rs  tap.rs  tap_aggregator.rs
crates/dispatch-smoke/: Cargo.toml
crates/dispatch-smoke/src/: main.rs
crates/dispatch-tap/: Cargo.toml
crates/dispatch-tap/src/: eip712.rs  lib.rs  rav.rs
crates/drpc-gateway/src/: discovery.rs  server.rs
crates/drpc-oracle/: Cargo.toml
crates/drpc-oracle/src/: config.rs  main.rs  oracle.rs
crates/drpc-service/: Cargo.toml
crates/drpc-service/migrations/: 0002_fix_tap_ravs.sql
crates/drpc-service/src/: config.rs  lib.rs  server.rs  tap_aggregator.rs
crates/drpc-smoke/: Cargo.toml
crates/drpc-smoke/src/: main.rs
crates/drpc-tap/: Cargo.toml
crates/drpc-tap/src/: eip712.rs  lib.rs
demo/: package-lock.json  package.json  run.ts  tsconfig.json
docker/: Dockerfile.gateway  Dockerfile.oracle  Dockerfile.service  config.example.toml  docker-compose.yml  gateway.example.toml  oracle.example.toml
docs/src/: architecture.md  changelog.mdx  configuration.md  consumers.md  contracts.md  getting-started.md  introduction.md  payments.md  providers.md  roadmap.md
docs/src/components/: README.md  service.md
e2e/: package-lock.json  package.json
e2e/src/: rpc.test.ts  setup.ts
e2e/tmp/: gateway.toml  service.toml
indexer-agent/: package-lock.json  package.json  tsconfig.json  vitest.config.js
indexer-agent/src/: agent.test.ts  agent.ts  config.ts
proxy/: package.json
proxy/src/: index.ts
subgraph/: networks.json  package-lock.json  subgraph.yaml
subgraph/src/: mapping.ts
(+10 files in other folders)
