[package]
name = "dispatch-oracle"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
alloy-primitives   = { workspace = true }
reqwest      = { workspace = true }

# Ethereum provider + local signer for Arbitrum tx submission
alloy = { version = "0.5", features = [
    "provider-http",
    "signer-local",
    "contract",
] }
